# wascraper

./: README.md  example.py  example2.py  pyproject.toml  pytoptoject.toml  setup.cfg  setup.py
examples/: readme.md
src/wa-scraper/: wa-scraper.py  wa_scraper.py
wascraper/: __init__.py  wascraper.py
wascraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
